implemantation room hold in redis
ketika user mengisi detail data reservasi untuk booking, maka redis mengunci kamar selama 10 menit untuk mencegah double booking.
